--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -5,18 +5,12 @@
   <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
     <mat-form-field>
       <!--      elvis operator for post?.title forces to check if exist bf populating title-->
-      <input
-        matInput
-        formControlName="title"
-        type="text"
-        placeholder="Title">
+      <input matInput formControlName="title" type="text" placeholder="Title">
       <mat-error *ngIf="form.get('title').invalid">Please Enter Post Title</mat-error>
     </mat-form-field>
     <div>
       <!--      when pressing button, it simulates the input type file to upload in CSS-->
-      <button
-        mat-stroked-button type="button" (click)="filePicker.click()">Upload Image
-      </button>
+      <button mat-stroked-button type="button" (click)="filePicker.click()">Upload Image</button>
       <!--      local reference w/ file type and proxy to filePicker / access event w/ $event-->
       <input type="file" #filePicker (change)="onImagePick($event)">
     </div>
@@ -26,20 +20,11 @@
       <img [src]="imagePreview" [alt]="form.value.title">
     </div>
     <mat-form-field>
-      <textarea
-        matInput
-        rows="4"
-        formControlName="content"
-        placeholder="Post Content">
-      </textarea>
+      <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
       <mat-error *ngIf="form.get('content').invalid">Please Enter Post Content</mat-error>
     </mat-form-field>
-
     <!--    type=submit is necessary b/c it is form data-->
-    <button mat-raised-button
-            color="primary"
-            type="submit">Save Post
-    </button>
+    <button mat-raised-button color="primary" type="submit">Save Post</button>
   </form>
 </mat-card>
 
