--- a/src/app/header/header.componet.html
+++ b/src/app/header/header.componet.html
@@ -4,15 +4,19 @@
   </span>
   <span class="spacer"></span>
   <ul>
+    <li>
+      <!--      matt-accent applies underlying color b/c its almost identical-->
+      <a mat-button routerLink="/list" routerLinkActive="mat-accent">Posts</a>
+    </li>
     <li *ngIf="userIsAuthenticated">
 <!--      matt-accent applies underlying color b/c its almost identical-->
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+      <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+      <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
     <li *ngIf="userIsAuthenticated">
       <button mat-button (click)="onLogout()">Logout</button>
